Align Flat last item always correctly

--- a/src/css/widget/_flat.scss
+++ b/src/css/widget/_flat.scss
@@ -8,6 +8,10 @@
     li {
       display: block;
       width: calc((100% - #{$width-gap} * 2) / 3);
+
+      &:nth-child(3n+2):last-child {
+        width: calc((100% - #{$width-gap} * 2) / 3 * 2 + #{$width-gap});
+      }
     }
   }
 }
